@@ -8,10 +8,11 @@
 			<![CDATA[_0987654321abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ{}-]]>
 		</charsintokens>
 		<charsdelimitingtokens><![CDATA[ []()]]></charsdelimitingtokens>
+        <folding toplevel="2" />
 	</head>
 
 	<states>
-	
+
 		<default id="Base" color="#000000" inverted-color="#ffffff">
 
 			<keywords id="Variables" color="#848484" useforautocomplete="no">
@@ -30,7 +31,7 @@
 				<regex>(\^\^)</regex>
 			</keywords>
 
-			<keywords id="Category predicate direct call" color="#0000ff" useforautocomplete="no">
+			<keywords id="Category Predicate Direct Call" color="#0000ff" useforautocomplete="no">
 				<regex>(:)</regex>
 			</keywords>
 
@@ -243,31 +244,43 @@
 				<regex>:-\s(threaded)\.</regex>
 			</keywords>
 
-			<keywords id="Clause operator" color="#000000" useforautocomplete="no">
+			<keywords id="Clause Operator" color="#000000" useforautocomplete="no">
 				<regex>(:-)</regex>
 			</keywords>
 
-		</default>
+			<state id="Strings" color="#881314" useforautocomplete="no">
+				<begin><regex>(?&lt;!0')"</regex></begin>
+				<end><regex>"</regex></end>
+			</state>
 
-		<state id="Strings" color="#881314" useforautocomplete="no">
-			<begin><regex>(?&lt;!0')"</regex></begin>
-			<end><regex>"</regex></end>
-		</state>
+			<state id="Quoted Atoms" color="#881314" useforautocomplete="no">
+				<begin><regex>(?&lt;!0|0')'</regex></begin>
+				<end><regex>'</regex></end>
+			</state>
 
-		<state id="Quoted Atoms" color="#881314" useforautocomplete="no">
-			<begin><regex>(?&lt;!0|0')'</regex></begin>
-			<end><regex>'</regex></end>
-		</state>
-
-		<state id="Comment" color="#236E25" font-style="italic" useforautocomplete="no">
-			<begin><regex>/\*</regex></begin>
-			<end><regex>\*/</regex></end>
-		</state>
+			<state id="Comment" color="#236E25" font-style="italic" useforautocomplete="no" foldable="yes">
+				<begin><regex>/\*</regex></begin>
+				<end><regex>\*/</regex></end>
+			</state>
 		
-		<state id="SingleComment" color="#236E25" font-style="italic" useforautocomplete="no">
+			<state id="Single Comment" color="#236E25" font-style="italic" useforautocomplete="no">
 			<begin><regex>(?&lt;!0')%</regex></begin>
 			<end><regex>[\n\r]</regex></end>
 		</state>
+	
+			<state id="Entity" foldable="yes">
+				<begin><regex>:-\s(?:object|protocol|category)\(</regex></begin>
+				<end><regex>:-\send_(?:object|protocol|category)\.</regex></end>
+				<import />
+			</state>
+	
+			<state id="Conditional Compilation" foldable="yes">
+				<begin><regex>:-\sif\(</regex></begin>
+				<end><regex>:-\sendif\.</regex></end>
+				<import />
+			</state>
+
+		</default>
 
 	</states>
 
